{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 60,
  "lineage": "b1bb098e-94a2-10e0-7123-1044e1ffec85",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "on-prem-allow-custom",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-04-26T11:40:04.161-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/qwiklabs-gcp-01-fd9db8a58e32/global/firewalls/on-prem-allow-custom",
            "log_config": [],
            "name": "on-prem-allow-custom",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-fd9db8a58e32/global/networks/on-prem",
            "priority": 65534,
            "project": "qwiklabs-gcp-01-fd9db8a58e32",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-fd9db8a58e32/global/firewalls/on-prem-allow-custom",
            "source_ranges": [
              "192.168.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.on-prem"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "on-prem-allow-ssh-icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-04-26T11:40:02.974-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/qwiklabs-gcp-01-fd9db8a58e32/global/firewalls/on-prem-allow-ssh-icmp",
            "log_config": [],
            "name": "on-prem-allow-ssh-icmp",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-fd9db8a58e32/global/networks/on-prem",
            "priority": 65534,
            "project": "qwiklabs-gcp-01-fd9db8a58e32",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-fd9db8a58e32/global/firewalls/on-prem-allow-ssh-icmp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.on-prem"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "vpc-demo-allow-custom",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-04-26T11:39:52.381-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/qwiklabs-gcp-01-fd9db8a58e32/global/firewalls/vpc-demo-allow-custom",
            "log_config": [],
            "name": "vpc-demo-allow-custom",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-fd9db8a58e32/global/networks/vpc-demo",
            "priority": 65534,
            "project": "qwiklabs-gcp-01-fd9db8a58e32",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-fd9db8a58e32/global/firewalls/vpc-demo-allow-custom",
            "source_ranges": [
              "10.0.0.0/8"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc-demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "vpc-demo-allow-ssh-icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-04-26T11:39:52.701-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/qwiklabs-gcp-01-fd9db8a58e32/global/firewalls/vpc-demo-allow-ssh-icmp",
            "log_config": [],
            "name": "vpc-demo-allow-ssh-icmp",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-fd9db8a58e32/global/networks/vpc-demo",
            "priority": 65534,
            "project": "qwiklabs-gcp-01-fd9db8a58e32",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-fd9db8a58e32/global/firewalls/vpc-demo-allow-ssh-icmp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc-demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "on-prem-instance1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20230411",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-fd9db8a58e32/zones/us-central1-a/disks/on-prem-instance1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/qwiklabs-gcp-01-fd9db8a58e32/zones/us-central1-a/instances/on-prem-instance1",
            "instance_id": "36279746503692030",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "AH0kuKTJMLc=",
            "name": "on-prem-instance1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.136.30.32",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-fd9db8a58e32/global/networks/on-prem",
                "network_ip": "192.168.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-fd9db8a58e32/regions/us-central1/subnetworks/on-prem-subnet1",
                "subnetwork_project": "qwiklabs-gcp-01-fd9db8a58e32"
              }
            ],
            "project": "qwiklabs-gcp-01-fd9db8a58e32",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-fd9db8a58e32/zones/us-central1-a/instances/on-prem-instance1",
            "service_account": [
              {
                "email": "562176375703-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring.write",
                  "https://www.googleapis.com/auth/service.management.readonly",
                  "https://www.googleapis.com/auth/servicecontrol",
                  "https://www.googleapis.com/auth/trace.append"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "data.google_compute_default_service_account.default",
            "google_compute_network.on-prem",
            "google_compute_subnetwork.on-prem-subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vpc-demo-instance1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20230411",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-fd9db8a58e32/zones/us-central1-b/disks/vpc-demo-instance1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/qwiklabs-gcp-01-fd9db8a58e32/zones/us-central1-b/instances/vpc-demo-instance1",
            "instance_id": "7628103169144573669",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "AH0kuKTJMLc=",
            "name": "vpc-demo-instance1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "146.148.96.101",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-fd9db8a58e32/global/networks/vpc-demo",
                "network_ip": "10.1.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-fd9db8a58e32/regions/us-central1/subnetworks/vpc-demo-subnet1",
                "subnetwork_project": "qwiklabs-gcp-01-fd9db8a58e32"
              }
            ],
            "project": "qwiklabs-gcp-01-fd9db8a58e32",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-fd9db8a58e32/zones/us-central1-b/instances/vpc-demo-instance1",
            "service_account": [
              {
                "email": "562176375703-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring.write",
                  "https://www.googleapis.com/auth/service.management.readonly",
                  "https://www.googleapis.com/auth/servicecontrol",
                  "https://www.googleapis.com/auth/trace.append"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-b"
          },
          "dependencies": [
            "data.google_compute_default_service_account.default",
            "google_compute_network.vpc-demo",
            "google_compute_subnetwork.vpc-demo-subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vpc-demo-instance2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20230411",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-fd9db8a58e32/zones/us-east1-b/disks/vpc-demo-instance2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/qwiklabs-gcp-01-fd9db8a58e32/zones/us-east1-b/instances/vpc-demo-instance2",
            "instance_id": "7499649205651427040",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "AH0kuKTJMLc=",
            "name": "vpc-demo-instance2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.73.87.250",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-fd9db8a58e32/global/networks/vpc-demo",
                "network_ip": "10.2.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-fd9db8a58e32/regions/us-east1/subnetworks/vpc-demo-subnet2",
                "subnetwork_project": "qwiklabs-gcp-01-fd9db8a58e32"
              }
            ],
            "project": "qwiklabs-gcp-01-fd9db8a58e32",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-fd9db8a58e32/zones/us-east1-b/instances/vpc-demo-instance2",
            "service_account": [
              {
                "email": "562176375703-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring.write",
                  "https://www.googleapis.com/auth/service.management.readonly",
                  "https://www.googleapis.com/auth/servicecontrol",
                  "https://www.googleapis.com/auth/trace.append"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-east1-b"
          },
          "dependencies": [
            "data.google_compute_default_service_account.default",
            "google_compute_network.vpc-demo",
            "google_compute_subnetwork.vpc-demo-subnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "on-prem",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "description": "On premise VPC",
            "enable_ula_internal_ipv6": false,
            "id": "projects/qwiklabs-gcp-01-fd9db8a58e32/global/networks/on-prem",
            "mtu": 0,
            "name": "on-prem",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "qwiklabs-gcp-01-fd9db8a58e32",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-fd9db8a58e32/global/networks/on-prem"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc-demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "description": "Demo VPC",
            "enable_ula_internal_ipv6": false,
            "id": "projects/qwiklabs-gcp-01-fd9db8a58e32/global/networks/vpc-demo",
            "mtu": 0,
            "name": "vpc-demo",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "qwiklabs-gcp-01-fd9db8a58e32",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-fd9db8a58e32/global/networks/vpc-demo"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "on-prem-router1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "DEFAULT",
                "asn": 65002,
                "keepalive_interval": 20
              }
            ],
            "creation_timestamp": "2023-04-26T11:40:03.567-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/qwiklabs-gcp-01-fd9db8a58e32/regions/us-central1/routers/on-prem-router1",
            "name": "on-prem-router1",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-fd9db8a58e32/global/networks/on-prem",
            "project": "qwiklabs-gcp-01-fd9db8a58e32",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-fd9db8a58e32/regions/us-central1/routers/on-prem-router1"
          },
          "dependencies": [
            "google_compute_network.on-prem"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "vpc-demo-router1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "DEFAULT",
                "asn": 65001,
                "keepalive_interval": 20
              }
            ],
            "creation_timestamp": "2023-04-26T11:39:54.396-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/qwiklabs-gcp-01-fd9db8a58e32/regions/us-central1/routers/vpc-demo-router1",
            "name": "vpc-demo-router1",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-fd9db8a58e32/global/networks/vpc-demo",
            "project": "qwiklabs-gcp-01-fd9db8a58e32",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-fd9db8a58e32/regions/us-central1/routers/vpc-demo-router1"
          },
          "dependencies": [
            "google_compute_network.vpc-demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "on-prem-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-04-26T11:40:03.729-07:00",
            "gateway_address": "192.168.1.1",
            "id": "projects/qwiklabs-gcp-01-fd9db8a58e32/regions/us-central1/subnetworks/on-prem-subnet1",
            "ip_cidr_range": "192.168.1.0/24",
            "name": "on-prem-subnet1",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-fd9db8a58e32/global/networks/on-prem",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "qwiklabs-gcp-01-fd9db8a58e32",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-fd9db8a58e32/regions/us-central1/subnetworks/on-prem-subnet1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.on-prem"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "vpc-demo-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-04-26T11:39:55.568-07:00",
            "gateway_address": "10.1.1.1",
            "id": "projects/qwiklabs-gcp-01-fd9db8a58e32/regions/us-central1/subnetworks/vpc-demo-subnet1",
            "ip_cidr_range": "10.1.1.0/24",
            "name": "vpc-demo-subnet1",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-fd9db8a58e32/global/networks/vpc-demo",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "qwiklabs-gcp-01-fd9db8a58e32",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-fd9db8a58e32/regions/us-central1/subnetworks/vpc-demo-subnet1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc-demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "vpc-demo-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-04-26T11:39:52.873-07:00",
            "gateway_address": "10.2.1.1",
            "id": "projects/qwiklabs-gcp-01-fd9db8a58e32/regions/us-east1/subnetworks/vpc-demo-subnet2",
            "ip_cidr_range": "10.2.1.0/24",
            "name": "vpc-demo-subnet2",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-fd9db8a58e32/global/networks/vpc-demo",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "qwiklabs-gcp-01-fd9db8a58e32",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-fd9db8a58e32/regions/us-east1/subnetworks/vpc-demo-subnet2",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc-demo"
          ]
        }
      ]
    }
  ]
}